--- a/springsecuritysec3/src/main/resources/application.properties
+++ b/springsecuritysec3/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=springsecuritybasic
+spring.datasource.url=${HOST}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
