--- a/section1/springsecsection1/src/main/resources/application.properties
+++ b/section1/springsecsection1/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=${SPRING_APP_NAME:springsecsection1}
+spring.security.user.name=${SECURITY_USERNAME:batman}
+spring.security.user.password=${SECURITY_PASSWORD:darknight}
 logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
